# TextGen

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: celery.py  settings.py  urls.py
core/: models.py  serializers.py  tasks.py  urls.py  views.py
